--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html> 
 <html lang="en">
 <head>
-	<title> </title>
+	<link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+	<title>blink</title>
 
 </head>
 <body>
-	
+	<div id="greeting"> WARNING!!</div>
 
 
 
@@ -13,5 +16,13 @@
 
 
 
+
+
+
+
+
+
+
+<script type="text/javascript" src="resources/js/main.js"></script>
 </body>
 </html>
