update 3 blink text added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 </head>
 <body>
-	<div id="greeting"> WARNING!!</div>
+	<div id="greeting">WARNING !!!</div>
+	<div class="advise">proceed with extreme caution</div>
 
 
 
