--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html> 
 <html lang="en">
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
   <link rel="stylesheet" type="text/css" href="resources/css/style.css">
 	<title>blink</title>
 
 </head>
 <body>
-	<div id="greeting">WARNING !!!</div>
-	<div class="advise">proceed with extreme caution</div>
+	<div id="greeting">Game of Sqaures</div>
+	<!-- <div id="advise">proceed with extreme caution</div> -->
+<br><br>
+<main>
+	<canvas></canvas>
+</main>
+</br>
 
-
-    <input type="button" id="button" input="name"></input>
-
-
-
-
+    <button id="button" input="name"></button>
+    
 
 
 
