update 5 js practice

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html> 
-<html lang="en">
 <head>
+  <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
   <link rel="stylesheet" type="text/css" href="resources/css/style.css">
 	<title>blink</title>
 
 </head>
 <body>
-	<div id="greeting">Game of Sqaures</div>
-	<!-- <div id="advise">proceed with extreme caution</div> -->
-<br><br>
+	<div class="main-container">
+	<div id="greeting">Game of Sqaures</div><br>
+	<br>
 <main>
 	<canvas></canvas>
 </main>
 </br>
 
     <button id="button" input="name"></button>
-    
+</div>
 
 
 
