update 7 js practice

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </main>
 </br>
 
-    <button id="button" input="name"></button>
+    <input type='button' id="button">
 </div>
 
 
@@ -23,7 +23,13 @@
 
 
 
+<footer>
+	
 
+
+	
+</footer>
 <script type="text/javascript" src="resources/js/main.js"></script>
+
 </body>
 </html>
